# ALE

./: CMakeLists.txt  README.md  build.sh  compile_commands.json
.cache/clangd/index/: Camera.h.3DB968C8AA464B58.idx  Camera.h.96E7E9DC5CC90E24.idx  ImGuiFileDialog.cpp.3154F087EFCB0273.idx  ImGuiFileDialog.h.3CE33746B02EF684.idx  ImGuiFileDialogConfig.h.74C067ED25203E65.idx  event.h.66C3DC2F5FC1318D.idx  event.h.C9FEF8897540F64A.idx  filecheck.h.7BF436D2CE256FF4.idx  imconfig.h.283ABA970ECE25EC.idx  imconfig.h.2D1375B1E397EC05.idx  imconfig.h.BA39415BB179B6D4.idx  imgui.cpp.3AD91457B0819D1B.idx  imgui.cpp.49EC781722901628.idx  imgui.cpp.9938E45DD4656355.idx  imgui.h.2BFD33D114D8D593.idx  imgui.h.8786D9ABF11B2FEF.idx  imgui.h.BE2C98C6CB914F3A.idx  imgui_draw.cpp.380BF9AC8DE8EA75.idx  imgui_draw.cpp.DBE3D251ACCDF984.idx  imgui_draw.cpp.F6870A6CFCD03259.idx  imgui_impl_opengl3.cpp.1AFCBD0C802BA3A9.idx  imgui_impl_opengl3.cpp.83FDCDDF4712102A.idx  imgui_impl_opengl3.cpp.CF3E250C6A5CDBF8.idx  imgui_impl_opengl3.h.4501317C10EC7AED.idx  imgui_impl_opengl3.h.7FB6A28C9FD3D504.idx  imgui_impl_opengl3.h.C47BCA564154EDD0.idx  imgui_impl_opengl3_loader.h.46B88E2B9D030219.idx  imgui_impl_opengl3_loader.h.76076677F7B38ADB.idx  imgui_impl_opengl3_loader.h.A407169CE940C54C.idx  imgui_impl_sdl2.cpp.3FA9E358A93CA7EA.idx  imgui_impl_sdl2.cpp.49D8704E97F9E2A2.idx  imgui_impl_sdl2.cpp.93C28BE26396A21A.idx  imgui_impl_sdl2.h.28F7D1B671C056DF.idx  imgui_impl_sdl2.h.4E1A26047583D02C.idx  imgui_impl_sdl2.h.D141BA627BE55E94.idx  imgui_internal.h.730894FDD2EC113A.idx  imgui_internal.h.D2E831D3BCC37163.idx  imgui_internal.h.EA7F516C9352FCE6.idx  imgui_tables.cpp.2A9F256D46447BCE.idx  imgui_tables.cpp.381CDD0ECAC4C418.idx  (+26 more)
Shaders/: Fragmentshader.glsl  Vertexshader.glsl
include/: Camera.h  event.h  filecheck.h  mesh.h  selection.h
src/: main.cpp
